updated the classes in navbar to match the pre-populated CSS classes so that the alignment of navbar logout button was correct. Also added two lines at the end of showNavForLoggedInUser function to add the currentUser's username to the span with an id of '#nav-user-profile' and then called .show on the element with id 'nav-welcome'.

--- a/style.css
+++ b/style.css
@@ -45,14 +45,10 @@ nav {
   border-radius: 3px 3px 0 0;
 }
 
-.main-nav-links {
+#main-nav-links {
   margin: 0 15px;
 }
 
-#nav-bar-links{
-  font-size: 0.85rem;
-  margin: 0 3px;
-}
 .nav-link {
   font-size: 0.85rem;
   margin: 0 3px;
